Update README and add a link back to the Github repo

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ DEALINGS IN THE SOFTWARE. -->
 				<div id="fretboards">
 				</div>
 				<p class="note">Select a root note and chord tones at the left to configure the fretboard. Select marked positions to configure a <a href="http://lilypond.org/doc/v2.19/Documentation/notation/common-notation-for-fretted-strings#fret-diagram-markups">LilyPond fret diagram</a>.</p>
-				<p class="note">Guitar Chord Voicing Explorer &mdash; Copyright &copy; 2016 <a href="http://kooima.net">Robert Kooima</a></p>
+				<p class="note">Guitar Chord Voicing Explorer &mdash; Copyright &copy; 2016 <a href="http://kooima.net">Robert Kooima</a>. <a href="https://github.com/rlk/fretboard">Fork me on Github</a>.</p>
 			</div>
 		</div>
 
