Add hover styling to fretboard markers

--- a/index.html
+++ b/index.html
@@ -194,6 +194,29 @@ DEALINGS IN THE SOFTWARE. -->
 				text-align: center;
 			}
 
+			table.fretboard div.t1:hover   { background-color: yellow; }
+			table.fretboard div.t2f:hover  { background-color: yellow; }
+			table.fretboard div.t2:hover   { background-color: yellow; }
+			table.fretboard div.t3f:hover  { background-color: yellow; }
+			table.fretboard div.t3:hover   { background-color: yellow; }
+			table.fretboard div.t4:hover   { background-color: yellow; }
+			table.fretboard div.t5f:hover  { background-color: yellow; }
+			table.fretboard div.t5:hover   { background-color: yellow; }
+			table.fretboard div.t5s:hover  { background-color: yellow; }
+			table.fretboard div.t6f:hover  { background-color: yellow; }
+			table.fretboard div.t6:hover   { background-color: yellow; }
+			table.fretboard div.t7ff:hover { background-color: yellow; }
+			table.fretboard div.t7f:hover  { background-color: yellow; }
+			table.fretboard div.t7:hover   { background-color: yellow; }
+			table.fretboard div.t9f:hover  { background-color: yellow; }
+			table.fretboard div.t9:hover   { background-color: yellow; }
+			table.fretboard div.t9s:hover  { background-color: yellow; }
+			table.fretboard div.t11f:hover { background-color: yellow; }
+			table.fretboard div.t11:hover  { background-color: yellow; }
+			table.fretboard div.t11s:hover { background-color: yellow; }
+			table.fretboard div.t13f:hover { background-color: yellow; }
+			table.fretboard div.t13:hover  { background-color: yellow; }
+
 			/* Selected fretboard positions */
 
 			table.fretboard div.t1   { background-image: url("img/t1.svg");   }
